# weed_robot_navigation

./: CMakeLists.txt  README.md  package.xml
config/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  fake_params.yaml  global_costmap_params.yaml  goal_params.yaml  local_costmap_params.yaml  local_costmap_static_params.yaml  navigation_common_params.yaml  point_cloud_params.yaml  teb_local_planner_params.yaml  turning_common_params.yaml  waypoint_params.yaml
launch/: navigation.launch  rviz.launch  sensor.launch  waypoint.launch
maps/: empty.yaml  field-global.pgm  field-global.yaml  field.pgm  field.yaml  jackal_race.pgm  obstacles.yaml
rviz/: config.rviz  costmap.rviz  follower.rviz  footprint.rviz  global_planner.rviz  hawk-eye.rviz  local_planner.rviz  odom.rviz  planners.rviz  plant.rviz  potential_field.rviz  teb.rviz  top.rviz  waypoints.rviz
src/: goal.cpp  point_cloud_obstacle.cpp  waypoint.cpp  world_odom_publisher.cpp
srv/: GetWaypoints.srv
test/path/: paths-error.py  paths-plot.py  paths-reference.py  paths-test.py
test/turn/: boxplot.py  path-plot.py  turns-analysis.py  turns-test.py
